--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
+/.idea/caches
 /.idea/libraries
-.DS_Store
+/.idea/workspace.xml
 /build
 /captures
-.externalNativeBuild
+/local.properties
