--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: android
 
 # https://docs.travis-ci.com/user/languages/android/
 # https://developer.android.com/studio/releases/build-tools
+# XXX: keep min & max versions in sync with `./app/build.gradle`
 android:
   components:
     - build-tools-28.0.2
