--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ language: android
 android:
   components:
     - android-28
-    - build-tools-28.0.3
     - platform-tools
     - tools
+
+before_install:
+  - yes | sdkmanager "build-tools;29.0.2"
